--- a/register.html
+++ b/register.html
@@ -114,9 +114,9 @@
 
         </div>
     </footer>
-    <!-- <script src="script/displayInfo.js"></script> -->
-    <script src="script/displayPets.js"></script>
-    <script src="script/register.js"></script>
+    <!-- <script src="displayInfo.js"></script> -->
+    <script src="displayPets.js"></script>
+    <script src="register.js"></script>
 
 
     <!-- <script>alert("There are " + myCustomers.length + " pet customers registered at this salon!" );</script> --> -->
